--- a/index.html
+++ b/index.html
@@ -1,17 +1,22 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover"/><meta name="theme-color" content="#0B0F19"/><title>Tim Loehr</title><meta name="title" content="Tim Loehr | Data Science & Machine Learning Portfolio"><meta name="description" content="Data Engineer & Scientist with expertise in data pipelines, ML engineering, and cloud data solutions. View projects and professional experience."><meta name="keywords" content="data science, machine learning, data engineer, portfolio, ML engineering, data visualization, neural networks, cloud computing"><meta name="author" content="Tim Loehr"><meta property="og:type" content="website"><meta property="og:url" content="/"><meta property="og:title" content="Tim Loehr | Data Science & Data Engineering Portfolio"><meta property="og:description" content="Data Engineer & Scientist with expertise in data pipelines, ML engineering, and cloud data solutions. View projects and professional experience."><meta property="og:image" content="/images/og-image.jpg"><meta property="twitter:card" content="summary_large_image"><meta property="twitter:url" content="/"><meta property="twitter:title" content="Tim Loehr | Data Science & Data Engineering Portfolio"><meta property="twitter:description" content="Data Engineer & Scientist with expertise in data pipelines, ML engineering, and cloud data solutions. View projects and professional experience."><meta property="twitter:image" content="/images/og-image.jpg"><link rel="canonical" href="/"><link rel="apple-touch-icon" href="/logo192.png"/><link rel="manifest" href="/manifest.json"/><link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500;700&family=Space+Mono:wght@400;700&family=VT323&display=swap" rel="stylesheet" media="print" onload='this.media="all"'><script type="application/ld+json">{
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover"/><meta name="theme-color" content="#0B0F19"/><title>Tim Loehr</title><meta name="title" content="Tim Loehr | Data Science & Data Engineering Portfolio"><meta name="description" content="Data Engineer & Scientist with expertise in data pipelines, ML engineering, and cloud data solutions. View projects and professional experience."><meta name="keywords" content="data science, machine learning, data engineer, portfolio, ML engineering, data visualization, neural networks, cloud computing"><meta name="author" content="Tim Loehr"><meta property="og:type" content="website"><meta property="og:url" content="/"><meta property="og:title" content="Tim Loehr | Data Science & Data Engineering Portfolio"><meta property="og:description" content="Data Engineer & Scientist with expertise in data pipelines, ML engineering, and cloud data solutions. View projects and professional experience."><meta property="og:image" content="/images/og-image.jpg"><meta property="twitter:card" content="summary_large_image"><meta property="twitter:url" content="/"><meta property="twitter:title" content="Tim Loehr | Data Science & Data Engineering Portfolio"><meta property="twitter:description" content="Data Engineer & Scientist with expertise in data pipelines, ML engineering, and cloud data solutions. View projects and professional experience."><meta property="twitter:image" content="/images/og-image.jpg"><link rel="canonical" href="/"><link rel="apple-touch-icon" href="/logo192.png"/><link rel="manifest" href="/manifest.json"/><link rel="preload" href="/images/astronaut.png" as="image"/><link rel="preload" href="/images/pikachu.png" as="image"/><link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500;700&family=Space+Mono:wght@400;700&family=VT323&display=swap" rel="stylesheet" media="print" onload='this.media="all"' crossorigin="anonymous"><link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500;700&family=Space+Mono:wght@400;700&family=VT323&display=swap"><script type="application/ld+json">{
         "@context": "https://schema.org",
         "@type": "ProfilePage",
-        "headline": "Tim Loehr | Data Science & Machine Learning Portfolio",
-        "description": "Data Engineer and Machine Learning specialist with expertise in data pipelines, ML engineering, and cloud data solutions. View projects and professional experience.",
-        "datePublished": "2025-03-11",
-        "dateModified": "2025-03-11",
+        "headline": "Tim Loehr | Data Engineer & Data Scientist Portfolio",
+        "description": "Data Engineer and Data Scientist with expertise in ETL pipelines, ML engineering, and cloud data solutions. View projects and professional experience.",
+        "datePublished": "2025-03-16",
+        "dateModified": "2025-03-16",
+        "mainEntityOfPage": {
+          "@type": "WebPage",
+          "@id": "https://mavengence.github.io/"
+        },
         "author": {
           "@type": "Person",
           "name": "Tim Loehr",
           "jobTitle": "Data Engineer",
-          "url": "https://www.timloehr.me/",
+          "url": "https://mavengence.github.io/",
+          "image": "https://mavengence.github.io/images/astronaut.png",
           "sameAs": [
-            "https://www.github.com/mavengence",
+            "https://github.com/mavengence",
             "https://www.linkedin.com/in/tim-loehr-821ba8188/",
             "https://medium.com/@mavengence",
             "https://scholar.google.com/citations?user=DLV7IqAAAAAJ&hl=en"
@@ -20,12 +25,12 @@
             "Data Science",
             "Machine Learning",
             "Data Engineering",
-            "Cloud Computing",
-            "Data Visualization",
-            "Neural Networks",
-            "Feature Engineering",
-            "Big Data",
-            "Real-time Processing"
+            "ETL Pipeline Design",
+            "SQL & NoSQL Databases",
+            "Data Warehousing",
+            "Kafka & Spark",
+            "Airflow & Orchestration",
+            "Cloud Infrastructure"
           ]
         },
         "mainEntity": {
@@ -35,20 +40,20 @@
               "@type": "ListItem",
               "position": 1,
               "name": "Work Experience",
-              "url": "https://www.apple.com"
+              "url": "https://mavengence.github.io/#experience"
             },
             {
               "@type": "ListItem",
               "position": 2,
               "name": "Projects",
-              "url": "https://www.redbull.com/"
+              "url": "https://mavengence.github.io/#projects"
             },
             {
               "@type": "ListItem",
               "position": 3,
               "name": "Interactive Console",
-              "url": "https://www.meta.com/"
+              "url": "https://mavengence.github.io/#console"
             }
           ]
         }
-      }</script><script defer="defer" src="/static/js/main.941aeda7.js"></script></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
+      }</script><script defer="defer" src="/static/js/main.d03929e6.js"></script></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
